tests/rosetta/out/C/md5.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:26Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int main() {
  list_string tmp2 = list_string_create(2);
  tmp2.data[0] = "d41d8cd98f00b204e9800998ecf8427e";
  tmp2.data[1] = "";
  list_string tmp3 = list_string_create(2);
  tmp3.data[0] = "0cc175b9c0f1b6a831c399e269772661";
  tmp3.data[1] = "a";
  list_string tmp4 = list_string_create(2);
  tmp4.data[0] = "900150983cd24fb0d6963f7d28e17f72";
  tmp4.data[1] = "abc";
  list_string tmp5 = list_string_create(2);
  tmp5.data[0] = "f96b697d7cb7938d525a2f31aaf161d0";
  tmp5.data[1] = "message digest";
  list_string tmp6 = list_string_create(2);
  tmp6.data[0] = "c3fcd3d76192e4007dfb496cca67e13b";
  tmp6.data[1] = "abcdefghijklmnopqrstuvwxyz";
  list_string tmp7 = list_string_create(2);
  tmp7.data[0] = "d174ab98d277d9f5a5611c2c9f419d9f";
  tmp7.data[1] =
      "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
  char *tmp9 = concat_string(
      "12345678901234567890",
      "123456789012345678901234567890123456789012345678901234567890");
  list_string tmp8 = list_string_create(2);
  tmp8.data[0] = "57edf4a22be3c955ac49da2e2107b67a";
  tmp8.data[1] = tmp9;
  list_string tmp10 = list_string_create(2);
  tmp10.data[0] = "e38ca1d920c4b8b8d3946b2c72f01680";
  tmp10.data[1] = "The quick brown fox jumped over the lazy dog's back";
  list_int tmp1_data[] = {tmp2, tmp3, tmp4, tmp5, tmp6, tmp7, tmp8, tmp10};
  list_list_int tmp1 = {8, tmp1_data};
  for (int tmp11 = 0; tmp11 < tmp1.len; tmp11++) {
    int pair = tmp1.data[tmp11];
    int sum = testpkg.m_d5_hex(pair.data[1]);
    if ((sum != pair.data[0])) {
      printf("MD5 fail\n");
      printf("  for string, %s\n", pair.data[1]);
      printf("  expected:   %s\n", pair.data[0]);
      printf("  got:        %d\n", sum);
    }
  }
  return 0;
}
